fix overlapping nav text and hamburger menu

--- a/src/components/LandingPage/HeroSlider/HeroSlider.css
+++ b/src/components/LandingPage/HeroSlider/HeroSlider.css
@@ -45,7 +45,7 @@
 
 /* mobile only */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .hero-slider {
     padding: 5px; 
   }
